specs/grammar-tests/negative/head-method.lace
head("$BASE_URL/health").expect(status: 200)
